--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Travel Guide to Bali</title>
 </head>
 <body>
-    <h1 id="main">Travel Guide to Bali</h1>
+    <h1>Travel Guide to Bali</h1>
 
     <nav>
         <ul>
